@@ -42,7 +42,7 @@ extern wxWindowGTK   *g_delayedFocus;
 // "clicked"
 //-----------------------------------------------------------------------------
 
-static void gtk_checkbox_clicked_callback( GtkWidget *WXUNUSED(widget), wxCheckBox *cb )
+static void gtk_checkbox_toggled_callback(GtkWidget *widget, wxCheckBox *cb)
 {
     if (g_isIdle) wxapp_install_idle_handler();
 
@@ -52,8 +52,60 @@ static void gtk_checkbox_clicked_callback( GtkWidget *WXUNUSED(widget), wxCheckB
     
     if (cb->m_blockEvent) return;
 
+#ifdef __WXGTK20__
+    // Transitions for 3state checkbox must be done manually, GTK's checkbox
+    // is 2state with additional "undetermined state" flag which isn't
+    // changed automatically:
+    if (cb->Is3State())
+    {
+        GtkToggleButton *toggle = GTK_TOGGLE_BUTTON(widget);
+
+        if (cb->Is3rdStateAllowedForUser())
+        {
+            // The 3 states cycle like this when clicked:
+            // checked -> undetermined -> unchecked -> checked -> ...
+            bool active = gtk_toggle_button_get_active(toggle);
+            bool inconsistent = gtk_toggle_button_get_inconsistent(toggle);
+
+            cb->m_blockEvent = true;
+            
+            if (!active && !inconsistent)
+            {
+                // checked -> undetermined
+                gtk_toggle_button_set_active(toggle, true);
+                gtk_toggle_button_set_inconsistent(toggle, true);
+            }
+            else if (!active && inconsistent)
+            {
+                // undetermined -> unchecked
+                gtk_toggle_button_set_inconsistent(toggle, false);
+            }
+            else if (active && !inconsistent)
+            {
+                // unchecked -> checked
+                // nothing to do
+            }
+            else
+            {
+                wxFAIL_MSG(_T("3state wxCheckBox in unexpected state!"));
+            }
+            
+            cb->m_blockEvent = false;
+        }
+        else
+        {
+            // user's action unsets undetermined state:
+            gtk_toggle_button_set_inconsistent(toggle, false);
+        }
+    }
+#endif
+
     wxCommandEvent event(wxEVT_COMMAND_CHECKBOX_CLICKED, cb->GetId());
-    event.SetInt( cb->GetValue() );
+#ifdef __WXGTK20__
+    event.SetInt(cb->Get3StateValue());
+#else
+    event.SetInt(cb->GetValue());
+#endif
     event.SetEventObject(cb);
     cb->GetEventHandler()->ProcessEvent(event);
 }
@@ -88,6 +140,11 @@ bool wxCheckBox::Create(wxWindow *parent,
         return FALSE;
     }
 
+    wxASSERT_MSG( (style & wxCHK_ALLOW_3RD_STATE_FOR_USER) == 0 ||
+                  (style & wxCHK_3STATE) != 0,
+                  wxT("Using wxCHK_ALLOW_3RD_STATE_FOR_USER")
+                  wxT(" style flag for a 2-state checkbox is useless") );
+
     if ( style & wxALIGN_RIGHT )
     {
         // VZ: as I don't know a way to create a right aligned checkbox with
@@ -114,8 +171,8 @@ bool wxCheckBox::Create(wxWindow *parent,
     SetLabel( label );
 
     gtk_signal_connect( GTK_OBJECT(m_widgetCheckbox),
-                        "clicked",
-                        GTK_SIGNAL_FUNC(gtk_checkbox_clicked_callback),
+                        "toggled",
+                        GTK_SIGNAL_FUNC(gtk_checkbox_toggled_callback),
                         (gpointer *)this );
 
     m_parent->DoAddChild( this );
@@ -143,8 +200,33 @@ bool wxCheckBox::GetValue() const
 {
     wxCHECK_MSG( m_widgetCheckbox != NULL, FALSE, wxT("invalid checkbox") );
 
+#ifdef __WXGTK20__
+    return gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(m_widgetCheckbox));
+#else
     return GTK_TOGGLE_BUTTON(m_widgetCheckbox)->active;
+#endif
 }
+
+#ifdef __WXGTK20__
+void wxCheckBox::DoSet3StateValue(wxCheckBoxState state)
+{
+    SetValue(state != wxCHK_UNCHECKED);
+    gtk_toggle_button_set_inconsistent(GTK_TOGGLE_BUTTON(m_widgetCheckbox),
+                                       state == wxCHK_UNDETERMINED);
+}
+
+wxCheckBoxState wxCheckBox::DoGet3StateValue() const
+{
+    if (gtk_toggle_button_get_inconsistent(GTK_TOGGLE_BUTTON(m_widgetCheckbox)))
+    {
+        return wxCHK_UNDETERMINED;
+    }
+    else
+    {
+        return GetValue() ? wxCHK_CHECKED : wxCHK_UNCHECKED;
+    }
+}
+#endif
 
 void wxCheckBox::SetLabel( const wxString& label )
 {
